# ur5-gazebo-grasping

./: README.md
find_object_2d/launch/: find_object_3d_kinect2.launch
kinect_v2_udrf/: README.md
kinect_v2_udrf/kinect_v2/: CMakeLists.txt
kinect_v2_udrf/kinect_v2/urdf/: kinect_v2.gazebo.xacro
opencv/: CMakeLists.txt  package.xml
opencv/launch/: image_converter.launch
opencv/models/checkerboard_6_6_0_05/: checkerboard.sdf  model.config
opencv/scripts/: cv_brdge.py  generate_checkboard.py  get_rotateMatrix.py  image_converter.py  pixelcoord2worldcoord.py  pixelcoord2worldcoord_method2.py  pixelcoord2worldcoord_method3.py  tf_listener.py
robotiq_85_gripper/robotiq_85_bringup/: CMakeLists.txt  package.xml
robotiq_85_gripper/robotiq_85_bringup/rviz/: robotiq_85.rviz
robotiq_85_gripper/robotiq_85_description/launch/: display.launch
robotiq_85_gripper/robotiq_85_description/urdf/: kinova_robotiq_85_gripper.xacro  robotiq_85_gripper.xacro
robotiq_85_gripper/robotiq_85_moveit_config/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_moveit_config/config/: robotiq_85_gripper.srdf
robotiq_85_gripper/robotiq_85_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  setup_assistant.launch  warehouse.launch
robotiq_85_gripper/robotiq_85_msgs/: CMakeLists.txt  package.xml
robotiq_85_gripper/robotiq_85_msgs/msg/: GripperCmd.msg  GripperStat.msg
robotiq_85_gripper/si_utils/scripts/: timed_roslaunch
universal_robot/ur5_moveit_config/config/: controllers.yaml
universal_robot/ur_description/urdf/: r200.urdf.xacro  ur5_robot.urdf.xacro  ur5_with_stand.urdf.xacro  ur5_with_stand_gripper.urdf.xacro  ur5_with_stand_object.urdf.xacro
universal_robot/ur_gazebo/launch/: ur5_my_world.launch
universal_robot/ur_gazebo/worlds/: circular_moving_target.world  my_world3.world  my_world4.world  my_world4_ball_moving.world  my_world5.world
ur5-gazebo-grasping/kinect_v2_udrf/: LICENSE
ur5-gazebo-grasping/kinect_v2_udrf/kinect_v2/: package.xml  urdf.rviz
ur5-gazebo-grasping/robotiq_85_gripper/: README.md
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_description/: CMakeLists.txt  package.xml  urdf.rviz
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_description/launch/: upload_robotiq_85_gripper.launch
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_description/urdf/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper_sim_base.urdf.xacro  robotiq_85_kinova_coupler.urdf.xacro
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_driver/: CMakeLists.txt  package.xml  setup.py
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_driver/src/robotiq_85/: gripper_io.py  modbus_crc.py  robotiq_85_driver.py  robotiq_85_gripper.py  robotiq_85_gripper_test.py
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_gripper/: CMakeLists.txt  package.xml
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_moveit_config/: .setup_assistant  package.xml
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_simulation/roboticsgroup_gazebo_plugins/: CMakeLists.txt
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_simulation/roboticsgroup_gazebo_plugins/src/: mimic_joint_plugin.cpp
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_simulation/robotiq_85_gazebo/: CMakeLists.txt  package.xml
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_simulation/robotiq_85_gazebo/launch/: controller_utils.launch  robotiq_85.launch  robotiq_85_moveit_rviz_test.launch  robotiq_85_moveit_sim.launch  test_kinematics.launch
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_simulation/robotiq_85_gazebo/scripts/: robotiq_85_moveit_test.py
ur5-gazebo-grasping/robotiq_85_gripper/robotiq_85_simulation/robotiq_85_simulation/: CMakeLists.txt  package.xml
ur5-gazebo-grasping/robotiq_85_gripper/si_utils/: CMakeLists.txt  package.xml
ur5-gazebo-grasping/ur5_single_arm_manipulation/: package.xml
ur5-gazebo-grasping/ur5_single_arm_manipulation/config/: ur5_grasp_data.yaml
ur5-gazebo-grasping/ur5_single_arm_manipulation/launch/: pick_and_place.launch  planners.launch
ur5-gazebo-grasping/ur5_single_arm_manipulation/scripts/: grasp_test.py  planners.py
ur5-gazebo-grasping/ur5_single_arm_moveit_config/: CMakeLists.txt
ur5-gazebo-grasping/ur5_single_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  ur5_moveit_controller_manager.launch.xml  ur5_moveit_planning_execution.launch  warehouse.launch
ur5-gazebo-grasping/ur5_single_arm_tufts/: CMakeLists.txt  package.xml
ur5-gazebo-grasping/ur5_single_arm_tufts/controller/: effort_controller.yaml
ur5-gazebo-grasping/ur5_single_arm_tufts/launch/: ur5_single_arm_gazebo.launch
ur5-gazebo-grasping/ur5_single_arm_tufts/urdf/: gzplugin_grasp_fix.urdf.xacro  ur5_single_arm.urdf  ur5_single_arm.urdf.xacro
ur5-gazebo-grasping/ur5_single_arm_tufts/worlds/: ur5_cubes.world  ur5_setup.world
ur5_single_arm_manipulation/: CMakeLists.txt
ur5_single_arm_manipulation/launch/: execute_trajectory.launch  grasp_generator_server.launch
ur5_single_arm_manipulation/scripts/: execute_trajectory.py  grasping_demo.py  grasping_demo_vision.py  grasping_demo_vision1.py  grasping_demo_vision2.py  pick_and_place.py
ur5_single_arm_manipulation/scripts/scripts/: send_joints.py
ur5_single_arm_moveit_config/: package.xml
ur5_single_arm_moveit_config/config/: joint_limits.yaml  ur5.srdf
ur5_single_arm_moveit_config/launch/: demo.launch  move_group.launch  moveit.rviz  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
ur5_single_arm_tufts/launch/: ur5_single_arm_gazebo.launch  ur5_single_arm_rviz.launch  ur5_single_arm_rviz.rviz
ur5_single_arm_tufts/urdf/: ur5_single_arm.urdf.xacro
ur5_single_arm_tufts/urdf/objects/: block.urdf  table.urdf
ur5_single_arm_tufts/worlds/: ur5_cubes.world
(+37 files in other folders)
