<package>
    <name>robotiq_85_bringup</name>
    <version>0.0.1</version>
    <description>System launch file and environment hooks for Robotiq 85</description>
    
    <maintainer email="dev@stanleyinnovation.com">Stanley Innovation, Inc.</maintainer>
    <license>BSD</license>
    <author>Patrick Hussey</author>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roslaunch</build_depend>
    <run_depend>robotiq_85_driver</run_depend>
    <run_depend>robotiq_85_description</run_depend>
    <run_depend>joint_state_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>

	<export>
	</export>
</package>
