<package>
    <name>robotiq_85_driver</name>
    <version>0.0.1</version>
    <description>Drivers and nodes related to the Robotiq 85 Gripper</description>
    
    <maintainer email="dev@stanleyinnovation.com">Stanley Innovation, Inc.</maintainer>
    <license>BSD</license>
    <author>Patrick Hussey</author>

    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Packages needed to run but not to build-->
    <run_depend>robotiq_85_msgs</run_depend>
    <run_depend>robotiq_85_description</run_depend>

	<export>
	</export>
</package>
