<package>
    <name>si_utils</name>
    <version>0.0.1</version>
    <description>System launch file and environment hooks for various utilities</description>
    
    <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>
    <author>Patrick Hussey</author>
    <url type="repository">https://github.com/StanleyInnovation</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roslaunch</build_depend>

	<export>
	</export>
</package>
