<?xml version="1.0"?>
<package>
  <name>robotiq_85_gazebo</name>
  <version>1.0.0</version>
  <description>
      Gazebo wrapper for the Robotiq 85 gripper.
  </description>

  <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/StanleyInnovation/robotiq_85_gripper</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  

  <export>
  </export>
</package>
