<package>
    <name>robotiq_85_simulation</name>
    <version>0.0.1</version>
    
    <description>Simulation meta package for robotiq 85 gripper</description>
    <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>
    <author>Patrick Hussey</author>
    <url type="website">https://github.com/StanleyInnovation/robotiq_85_gripper</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <run_depend>robotiq_85_gazebo</run_depend>
    <run_depend>roboticsgroup_gazebo_plugins</run_depend>
    <export>
        <metapackage/>
    </export>
</package>
